--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -187,3 +187,89 @@
     -ms-overflow-style: none; /* IE and Edge */
     scrollbar-width: none; /* Firefox */
 }
+
+.prose h1 {
+    font-size: 1.5rem; /* This is equivalent to text-2xl */
+    line-height: 2rem; /* A matching line height for good spacing */
+    font-weight: 700; /* Explicitly set the font weight */
+    margin: revert;
+}
+
+.prose h2 {
+    font-size: 1.25rem; /* This is equivalent to text-xl */
+    line-height: 1.75rem; /* A matching line height for good spacing */
+    font-weight: 700; /* Explicitly set the font weight */
+    margin: revert;
+}
+
+.prose h3 {
+    font-size: 1.125rem; /* This is equivalent to text-lg */
+    line-height: 1.5rem; /* A matching line height for good spacing */
+    font-weight: 700; /* Explicitly set the font weight */
+    margin: revert;
+}
+
+.prose h4 {
+    font-size: 1.1rem; /* This is equivalent to text-sm */
+    line-height: 1.5rem; /* A matching line height for good spacing */
+    font-weight: 700; /* Explicitly set the font weight */
+    margin: revert;
+}
+
+.prose h5 {
+    font-size: 0.875rem; /* This is equivalent to text-md */
+    line-height: 1.25rem; /* A matching line height for good spacing */
+    font-weight: 700; /* Explicitly set the font weight */
+    margin: revert;
+}
+
+.prose h6 {
+    font-size: 0.75rem; /* This is equivalent to text-sm */
+    line-height: 1.25rem; /* A matching line height for good spacing */
+    font-weight: 700; /* Explicitly set the font weight */
+    margin: revert;
+}
+
+.prose hr {
+    margin-top: 1.5em; /* Adjust this value as needed */
+    margin-bottom: 1.5em; /* Adjust this value as needed */
+}
+
+.prose ul ul,
+.prose ul ol,
+.prose ol ul,
+.prose ol ol {
+    padding-left: 1.5rem; /* Adjust this value for more/less indentation */
+}
+
+.prose li {
+    margin-top: 0.25em; /* Space between list items */
+    margin-bottom: 0.25em; /* Space between list items */
+}
+
+.prose li p {
+    margin-top: 0; /* Remove top margin for paragraphs inside list items */
+    margin-bottom: 0; /* Remove bottom margin for paragraphs inside list items */
+}
+
+.prose a {
+    text-decoration: underline;
+    font-weight: 500;
+    color: var(--color-primary);
+    transition: color 0.2s ease-in-out;
+}
+
+.prose a:hover {
+    color: var(--color-accent);
+    text-decoration: none;
+}
+
+.prose ul {
+    list-style-type: disc; /* Default to disc for unordered lists */
+    padding-left: 1.5rem; /* Space for the bullet */
+}
+
+.prose ol {
+    list-style-type: decimal; /* Default to decimal for ordered lists */
+    padding-left: 1.5rem; /* Space for the number */
+}
